# swift-cmake-examples

./: env.sh
HelloMinimal/: CMakeLists.txt  hello.swift
HelloMinimal/.tipi/: env  id
HelloWorld/.tipi/: id
HelloWorld/Source/HelloWorld/: CMakeLists.txt  HelloWorld.swift
